--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -694,8 +694,8 @@ line-height: 2.8125rem;
   margin-top: 48px;
   padding-top: 68px;
   width: 40%;
-  border-left: 1px #DDDDDD solid;
-  height: 100%;
+/*  border-left: 1px #DDDDDD solid;
+*/  height: 100%;
 }
 
 #note-close{
@@ -704,7 +704,6 @@ line-height: 2.8125rem;
   cursor: pointer;
   cursor: hand;
 }
-
 
 #reader-center-div{
       margin-left: 27%;
@@ -735,4 +734,8 @@ line-height: 2.8125rem;
 }
 
 #ms-image{
+}
+
+#page-break{
+  padding-right: 40px;
 }
