--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -517,7 +517,7 @@ header{
 #note-header{
 }
 
-#notes note{
+#side-panel note{
   display: none;
 }
 
@@ -628,7 +628,7 @@ td{
   #TEI_left_panel hr{
     display: none !important;
   }
-  #notes{
+  #side-panel{
     display: none !important;
   }
   #top-half{
@@ -686,15 +686,14 @@ line-height: 2.8125rem;
   line-height: 2.8125rem;
     padding: 0 0.9375rem;
 }
-#notes{
+#side-panel{
   margin-right: 10%;
   padding-right: 40px;
   float: right;
   margin-top: 48px;
   padding-top: 68px;
   width: 40%;
-/*  border-left: 1px #DDDDDD solid;
-*/  height: 100%;
+  height: 100%;
 }
 
 #note-close{
@@ -726,7 +725,7 @@ line-height: 2.8125rem;
   width: 37% !important;
 }
 
-#image-reveal{
+#image-reveal, #tei-reveal{
   display: inline;
   cursor: pointer;
   cursor: hand;
@@ -742,4 +741,18 @@ line-height: 2.8125rem;
 
 #page-break{
   padding-right: 40px;
+}
+
+#tei-embed-container{
+  display: none;
+}
+
+code{
+  height: 400px;
+  width: 100%;
+  border: 1px solid black;
+  overflow-y: scroll;
+  overflow-x: scroll;
+  margin: 1.5em auto 1.5em auto;
+  padding: .5em 1.5em 1.5em 1.5em;
 }
