--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -756,3 +756,7 @@ code{
   margin: 1.5em auto 1.5em auto;
   padding: .5em 1.5em 1.5em 1.5em;
 }
+
+#loading-gif{
+  background-image: url("/assets/transparentbg.png");
+}
