--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -46,7 +46,8 @@
             <div id="tei-embed-container" class="hidden">
                 <div id="tei-embed-header"></div>
                 <div id="tei-embed" class="hidden">
-                    <code data-gist-id= <%= @gist_id %> ></code>
+                    <!-- <code data-gist-id= <%= @gist_id %> ></code> -->
+                    <pre><%= @simple_tei%></pre>
                 </div>
             </div>
     </div>
