--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -756,4 +756,23 @@ code, pre{
   overflow-x: scroll;
   margin: 1.5em auto 1.5em auto;
   padding: .5em 1.5em 1.5em 1.5em;
+  }
+
+#tei-embed{
+  font-size: inherit !important;
+  font-family: monospace, monospace;
+  font-size: 1em;
 }
+
+/*
+code {
+  font-family: Consolas, "Liberation Mono", Courier, monospace;
+  font-weight: normal;
+  color: #333333;
+  background-color: #f8f8f8;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #dfdfdf;
+  padding: 0.125rem 0.3125rem 0.0625rem; }
+
+*/
