--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -4,8 +4,6 @@
                 <!-- Stub because title is so long -->
                 <%#= @title %>
             </div>
-<!--             <div class="center-outer">
-                <div class="center-inner"> -->
             <div id="reader-nav-links">
                 <%= t(page_entries_info(@line_groups))%>
                     </a>
@@ -22,11 +20,10 @@
                 <label for="corrCheckbox" id="corr-label"> Corrections</label>
                 <input type="checkbox" name="corrCheckbox" id="corrCheckbox" style="display: inline;"> </form>
                 | <div id="image-reveal">MS Image</div>
-                | <div id="tei-reveal">TEI Embed</div><div id="loading-gif"></div><%#= image_tag('ajax-loader.gif', id: 'loading-gif', class: 'hidden', alt: 'loading gif')%>
+                | <div id="tei-reveal">TEI Embed</div><div id="loading-gif"></div>
                 <hr id="reader-hr">
             </div>
-<!--             </div>
-        </div> -->
+
         <div id="clear"></div>
 
 </div>
@@ -35,7 +32,6 @@
         <div id="note-header" class="hidden">Notes</div>
         <div id="image-header" class="hidden">Manuscript Image</div>
             <div class="note-contents hidden">
-            <!-- use javascript to bring out the notes here. -->
                 <%= @current_notes %>
             </div>
             <div id="ms-image-container" class="hidden">
