refactors app.css heavily

--- a/app/views/layouts/_manuscript_introduction.html.erb
+++ b/app/views/layouts/_manuscript_introduction.html.erb
@@ -9,7 +9,7 @@
                 <%= @introduction %>
             </div>
             <div id="links">
-                <%= link_to('read', url_for(params.merge(:edition => true))) %>
+                <%= link_to('Read', url_for(params.merge(:edition => true))) %>
             </div>
         </div>
     </div>
