--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -13,10 +13,6 @@
   font-weight: normal;
 }
 
-/*#special-footer{
-  bottom:0;
-}
-*/
 #special-footer hr{
   width:66.7%;
   text-align:center; margin: 0 auto;
@@ -95,10 +91,6 @@ nav{
   color:#cccccc !important;
 }
 
-.top-bar-section ul li a{
-
-}
-
 .titleRow{
   background-color: rgba(192,192,192,0.5);
   padding-left: 15px;
@@ -122,7 +114,6 @@ p {
   width: 100%;
   max-width: 100%;
   height: 100px;
-
 }
 
 
@@ -179,8 +170,7 @@ p.tagline {
 }
 
 .footer img{
-/*  max-height: 50px;
-*/  padding-right: 15px;
+  padding-right: 15px;
   margin-top: 15px;
   max-width: 183px;  
 }
@@ -217,24 +207,6 @@ TEI head{
 
 teiHeader{
   display: none;
-}
-
-/* Background image*/
-
-html{
-  background-position: top right;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  width:100%;
-  padding:0;
-  margin:0;
-  max-width: 100%;
-  overflow-x:hidden;
-  overflow-x:hidden;
 }
 
 /*dropdown/side menus*/
@@ -292,83 +264,7 @@ ul li ul li {
 .oe { 
 font-family: Mathematica6 Bold, Old English Text MT, Engravers Old English BT, Old English, Collins Old English, New Old English, serif; 
 } 
-
-#homepage-body{
-}
-
-text body{
-}
-
-/*Search bar */
-
-.box{
-  width: 215px;
-  height: 50px;
-}
-
-.container-4{
-  overflow: hidden;
-  width: 200px;
-  vertical-align: middle;
-  white-space: nowrap;
-}
-
-.container-4 input#search{
-  width: 200px;
-  background: #2b303b;
-  border: none;
-  font-size: 10pt;
-  float: left;
-  color: #fff;
-  padding-left: 15px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
-
-.container-4 input#search::-webkit-input-placeholder {
-   color: #65737e;
-}
- 
-.container-4 input#search:-moz-placeholder { /* Firefox 18- */
-   color: #65737e;  
-}
- 
-.container-4 input#search::-moz-placeholder {  /* Firefox 19+ */
-   color: #65737e;  
-}
- 
-.container-4 input#search:-ms-input-placeholder {  
-   color: #65737e;  
-}
-
-.container-4 button.icon{
-  -webkit-border-top-right-radius: 5px;
-  -webkit-border-bottom-right-radius: 5px;
-  -moz-border-radius-topright: 5px;
-  -moz-border-radius-bottomright: 5px;
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
- 
-  border: none;
-  background: #232833;
-  height: 50px;
-  width: 50px;
-  color: #4f5b66;
-  opacity: 0;
-  font-size: 10pt;
- 
-  -webkit-transition: all .55s ease;
-  -moz-transition: all .55s ease;
-  -ms-transition: all .55s ease;
-  -o-transition: all .55s ease;
-  transition: all .55s ease;
-}
-/*
-
   /*Versioning Machine*/
-
-
 
 #line_toggle, label{
   float:left;
@@ -449,26 +345,9 @@ td{
     font-size: 11pt;
 }
 
-/* Hack to eliminate spaces between in-line block elements. Anytime you parse a tag as html it will make a space. So put the tags here. but double check to make sure that they're working right in all cases. since things get nested it can get wonky. */
-/*ex{
-  margin-left: -4px;
-}*/
-
-/*choice sic, choice corr{
-  margin-left: -4px;
-}*/
-
-/*empty:choice, empty:sic, empty:corr{
-  margin-left: 0px;
-}*/
-
 ex{
   font-style: italic;
 }
-
-/*annotation{
-  text-decoration: underline;
-}*/
 
 l sup{
   cursor: pointer;
@@ -674,9 +553,7 @@ td{
 #sub-title{
   float: left;
   padding: 0 0.9375rem;
-/*  padding-top: 6px;*/
-line-height: 2.8125rem;
-
+  line-height: 2.8125rem;
 }
 #reader-hr{
   margin: 0.5em 0.5em 0 0;
@@ -731,9 +608,6 @@ line-height: 2.8125rem;
   cursor: hand;
 }
 
-#ms-image{
-}
-
 #ms-image-container{
     margin: 1.5em auto 1.5em auto;
     padding: .5em 1.5em 1.5em 1.5em;
@@ -748,8 +622,8 @@ line-height: 2.8125rem;
 }
 
 code, pre{
-  height: 600px;
-  width: 120%;
+/*  height: 600px;
+*/  width: 120%;
   border: 1px solid #DDDDDD;
   border-bottom-style: solid;
   overflow-y: scroll;
@@ -763,16 +637,3 @@ code, pre{
   font-family: monospace, monospace;
   font-size: 1em;
 }
-
-/*
-code {
-  font-family: Consolas, "Liberation Mono", Courier, monospace;
-  font-weight: normal;
-  color: #333333;
-  background-color: #f8f8f8;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #dfdfdf;
-  padding: 0.125rem 0.3125rem 0.0625rem; }
-
-*/
