--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -655,7 +655,11 @@ code, pre{
 }
 
 .line-heading{
-  margin: 2em 0 2em 0;
+  margin: 0 0 1em 0;
+}
+
+#note-header, #image-header, #tei-embed-header{
+  margin-bottom: 1em;
 }
 
 sic{
