--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -1,6 +1,6 @@
 <div id="reader-nav">
             <div id="sub-title">
-                Padua MS 32
+                <%= @short_title %>
                 <!-- Stub because title is so long -->
                 <%#= @title %>
             </div>
