--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -634,8 +634,8 @@ td{
 }
 
 code, pre{
-  max-height: 600px;
-  width: 120%;
+  height: 500px;
+  width: 130%;
   border: 1px solid #DDDDDD;
   border-bottom-style: solid;
   overflow-y: scroll;
@@ -668,4 +668,14 @@ sic{
 
 .milestone{
   margin-right: -50px;
+}
+
+#TEI_reader{
+  height: 99%;
+}
+
+#tei_wrapper{
+  height: 100%;
+  overflow:scroll;
+
 }
