--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -527,7 +527,7 @@ td{
     width: 80% !important;
   }
 
-  #corrCheckbox, #corr-label, #image-reveal, #tei-reveal, #corr-form{
+  #diploCheckbox, #diplo-label, #image-reveal, #tei-reveal, #diplo-form{
     display: none !important;
   }
 
@@ -595,23 +595,23 @@ td{
       margin-left: 27%;
 }
 
-#corrCheckbox{
+#diploCheckbox{
   display: block;
 }
 
-#corr-form{
+#diplo-form{
   display: inline;
   float: none;
 }
 
-#corr-label{
+#diplo-label{
   float: none;
   display: inline;
   text-decoration: none;
 }
 
 #tei_wrapper{
-  width: 37% !important;
+  width: 38% !important;
 }
 
 #image-reveal, #tei-reveal{
@@ -651,5 +651,17 @@ code, pre{
 }
 
 #tei-link-mobile{
+  display: none;
+}
+
+.line-heading{
+  margin: 0 0 1em 0;
+}
+
+#note-header, #image-header, #tei-embed-header{
+  margin-bottom: 1em;
+}
+
+sic{
   display: none;
 }
