refs #83 all notes appear now.

--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -614,7 +614,7 @@ td{
   width: 38% !important;
 }
 
-#image-reveal, #tei-reveal{
+#image-reveal, #tei-reveal, #all-note-reveal{
   display: inline;
   cursor: pointer;
   cursor: hand;
