--- a/app/views/layouts/_reading_interface.html.erb
+++ b/app/views/layouts/_reading_interface.html.erb
@@ -21,8 +21,8 @@
                 <input type="checkbox" name="diploCheckbox" id="diploCheckbox" style="display: inline;"> | </form>
 <!--                 | <div id="image-reveal">MS Image</div>
  -->                <div id="tei-reveal">TEI Embed</div>
-                    <div id="tei-link-mobile">| <%= link_to('TEI', 'https://raw.githubusercontent.com/wludh/huon_rails/master/lib/assets/' + @current_page_short + '.xml') %></div> |
-                     <div id="all-note-reveal">All Notes</div>
+                    <div id="tei-link-mobile">| <%= link_to('TEI', 'https://raw.githubusercontent.com/wludh/huon_rails/master/lib/assets/' + @current_page_short + '.xml') %></div>
+                    <div id="all-note-reveal">| All Notes</div>
                 <hr id="reader-hr">
             </div>
 
