--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="DH, digital humanities, Huon d'Auvergne, manuscript, edition, franco-italian, TEI">
     <meta name="description" content="A digital edition of the Huon d'Auvergne, a pre-modern, Franco-Italian Epic">
-  <title>Huon d'Auvergene</title>
+  <title>Huon d'Auvergne</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
