--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -122,7 +122,7 @@ p {
 }
 
 h1, h4, h5 {
-  color:#333;
+  color:#ff6666;
   font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif !important;
   margin-bottom:0;
   text-align: center;
@@ -265,9 +265,9 @@ ul li ul li {
   padding:0;
 }
 
-.oe { 
-font-family: Mathematica6 Bold, Old English Text MT, Engravers Old English BT, Old English, Collins Old English, New Old English, serif; 
-} 
+.oe {
+font-family: Mathematica6 Bold, Old English Text MT, Engravers Old English BT, Old English, Collins Old English, New Old English, serif;
+}
 
   /*Versioning Machine*/
 
