--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -122,7 +122,7 @@ p {
 }
 
 h1, h4, h5 {
-  color:#ff6666;
+  color:#333;
   font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif !important;
   margin-bottom:0;
   text-align: center;
