Update current material based on Abdur work.

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 
     <header class="row">
       <div class="large-12 columns text-center">
-       <h1>Huon d'Auvergne</h1>
+       <h1 id="main-title">Huon d'Auvergne</h1>
       </div>
     </header>
 
