--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -125,7 +125,7 @@ h1, h4, h5 {
   color:#333;
   font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif !important;
   margin-bottom:0;
-  text-align: left;
+  text-align: center;
 }
 
 p.tagline {
@@ -695,4 +695,12 @@ hi[rend="red-initial"]{
 hi[rend="blue-initial"]{
   color: blue;
   font-size: 26px;
+}
+
+ex[rend="italic"]:before{
+  content:"["
+}
+
+ex[rend="italic"]:after{
+  content:"]"
 }
