--- a/app/assets/stylesheets/teibp.css
+++ b/app/assets/stylesheets/teibp.css
@@ -446,9 +446,9 @@ code {
   font-family: Courier,monospace;
 }
 /* jawalsh:
-For things like collation, condition, etc. that can have text or paragraphs as 
-children, we should use margins, when the content is text, and no margins when there 
-are child paragraphs (or other block elements). Otherwise we end up with double 
+For things like collation, condition, etc. that can have text or paragraphs as
+children, we should use margins, when the content is text, and no margins when there
+are child paragraphs (or other block elements). Otherwise we end up with double
 margins. */
 collation {
   display: block;
@@ -525,7 +525,7 @@ creation {
   /* Empty Rule Set */
 }
 /*jawalsh:
-Need to handle attributes for custEvent. All the att.datable* attributes will be tricky. 
+Need to handle attributes for custEvent. All the att.datable* attributes will be tricky.
 custodialHist and custEvent may normally be hidden along with other header metadata, but
 we'll have other datable elements that may be tricky. */
 custEvent {
@@ -872,7 +872,7 @@ list {
 item > list {
   margin-top: 0;
 }
-/* Match only lists that are descendants of 
+/* Match only lists that are descendants of
 text. Otherwise they show up in the header. */
 text list[type=simple] {
   list-style-type: none;
@@ -1139,7 +1139,7 @@ pb {
   font-size: 11pt;
 }
 .pb {
-  float: right;
+  float: left;
   color: gray;
   font-size: 11pt;
 }
@@ -1377,9 +1377,9 @@ rs {
 }
 /*label*/
 /* s */
-/* When TEI document is embedded in HTML page, 
+/* When TEI document is embedded in HTML page,
    TEI's <s> element can be interpreted by
-   browser as HTML <s>, which results in 
+   browser as HTML <s>, which results in
    a strike-through from the "user agent"
    styles. */
 s {
