remove brackets around abbreviations in css

--- a/app/assets/stylesheets/teibp.css
+++ b/app/assets/stylesheets/teibp.css
@@ -653,30 +653,38 @@ TEI head {
   display: block;
   font-family: Arvo, sans-serif;
   font-weight: normal;
+  color: red;
 }
 body > head {
   font-size: 180%;
   text-indent: -0.5em;
+  color: red;
 }
 div > head {
   font-size: 170%;
   text-indent: -0.5em;
+  color: red;
 }
 div > div > head {
   font-size: 155%;
+  color: red;
 }
 div > div > div > head {
   font-size: 140%;
+  color: red;
 }
 div > div > div > div > head,
 list > head {
   font-size: 130%;
+  color: red;
 }
 div > div > div > div > div > head {
   font-size: 120%;
+  color: red;
 }
 div > div > div > div > div > div head {
   font-size: 110%;
+  color: red;
 }
 figure > head {
   display: block;
