critical editions to editions

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -20,7 +20,7 @@
         </section>
         <section class="top-bar-section">
           <ul class="right">
-            <li><%= link_to 'Critical Editions', editions_path() %>
+            <li><%= link_to 'Editions', editions_path() %>
               <ul data-options="mobile_show_parent_link: true">
                 <li> <%= link_to 'Berlin (B)', b_manuscript_path() %></li>
                 <li> <%= link_to 'Turin (T)', t_manuscript_path() %></li>
