--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -26,6 +26,7 @@
                 <li> <%= link_to 'Turin (T)', t_manuscript_path() %></li>
                 <li> <%= link_to 'Padua (P)', p_manuscript_path() %></li>
                 <li> <%= link_to 'Barbieri Fragment (Br)', br_manuscript_path() %></li>
+                <li> <%= link_to 'Berlin Translation', b_translation_path() %></li>
                 <li><%= link_to 'Hell Scene Comparison', hell_scene_path() %></li>
               </ul>
             </li>
