updated pages index

--- a/app/views/pages/edition.html.erb
+++ b/app/views/pages/edition.html.erb
@@ -13,31 +13,35 @@
 </p>
 <hr>
         <div id="manuscript_list_editions">
-                <h4 id="sub-header">The Franco-Italian <em>Huon d'Auvergne</em></h4>  
+                <h4 id="sub-header">The Franco-Italian <em>Huon d'Auvergne</em></h4>
           <p>
-            <%= link_to 'Berlin', b_manuscript_path() %> (B) | 
+            <%= link_to 'Berlin', b_manuscript_path() %> (B) |
             Berlin Kupferstichkabinett 78 D 8 (olim Hamilton 337)<br>
             Edited by Leslie Zarker Morgan; translated by Shira Schwam-Baird
           </p>
 
           <p>
-            <%= link_to 'Turin', t_manuscript_path() %> (T) | 
+            <%= link_to 'Turin', t_manuscript_path() %> (T) |
             Turin, Biblioteca nazionale, N III 19<br>
             Edited by Leslie Zarker Morgan
           </p>
 
-          <p>          
-            <%= link_to 'Padua', p_manuscript_path() %> (P) | 
+          <p>
+            <%= link_to 'Padua', p_manuscript_path() %> (P) |
               Padua, Biblioteca del Seminario Vescovile MS 32<br>
               Edited by Stephen P. McCormick
           </p>
-          <p>          
-            <%= link_to 'Barbieri Fragment', br_manuscript_path() %> (Br) |  
+          <p>
+            <%= link_to 'Barbieri Fragment', br_manuscript_path() %> (Br) |
             Bologna, Biblioteca dell'Archiginnasio B. 3489<br>
             Edited by Stephen P. McCormick and Michela Scattolini
           </p>
-        
-          
+          <p>
+            <%= link_to 'Berlin Translation', t_manuscript_path() %> (T) |
+            Turin, Biblioteca nazionale, N III 19<br>
+            Edited by Leslie Zarker Morgan
+          </p>
+
           <%= link_to 'Hell Scene Comparison', hell_scene_path() %>
         </div>
       </div>
