--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -14,42 +14,42 @@
         <h4 id="sub-header">Critical Editions</h4>
         <div id="manuscript_list_index">
           <%= link_to 'Berlin (B)', b_manuscript_path() %> |
-          <%= link_to 'Turin (T)', t_manuscript_path() %> |          
+          <%= link_to 'Turin (T)', t_manuscript_path() %> |
           <%= link_to 'Padua (P)', p_manuscript_path() %> |
           <%= link_to 'Barbieri Fragment (Br)', br_manuscript_path() %> |
-          <%= link_to 'Hell Scene Comparison', hell_scene_path() %>
+          <%= link_to 'Berlin Translation', b_translation_path() %> |
+          <%= link_to 'Hell Scene Comparison', hell_scene_path() %> |
         </div>
         <hr>
         <h4 id="sub-header">Huon d'Auvergne Project Team</h4>
         <div id="editorial_staff">
           <h5 id="sub-header">Lead Investigators</h5>
-           
+
           <div class="participant_section"><a href="http://www.loyola.edu/academic/modernlanguages/faculty/italian/morgan.aspx">Leslie Zarker Morgan</a>, Project Director and Principal Investigator (Loyola University Maryland)<br>
                     <a href="http://www.unf.edu/~sschwam/">Shira Schwam-Baird</a>, Principal Investigator (University of North Florida)<br>
                     <a href="https://wlu.academia.edu/StephenPatrickMcCormick">Stephen P. McCormick</a>, Principal Investigator (Washington and Lee University)</div>
-           
+
           <h5 id="sub-header">Collaborating Scholars</h5>
-           
+
           <div class="participant_section"><a href="http://history.arizona.edu/alan-bernstein">Alan Bernstein</a> (University of Arizona)<br>
                     <a href="http://ciham.ish-lyon.cnrs.fr/membres/jean-claude-vallecalle">Jean-Claude Vallecalle</a> (Université Lumière Lyon 2)<br>
                     <a href="http://www.ed.ac.uk/literatures-languages-cultures/delc/french/staff/philip-bennett">Philip Bennett</a> (University of Edinburgh)<br>
                     <a href="http://independent.academia.edu/MichelaGScattolini">Michela G. Scattolini</a> (Genoa, Italy; Independent researcher)</div>
-           
-          <h5 id="sub-header">Digital Humanities Team</h5>
-           
+
+          <h5 id="sub-header">Digital Humanities Scholars</h5>
+
           <div class="participant_section"><a href="http://library.wlu.edu/about/library-directory/mackenzie-brooks">Mackenzie Brooks</a> (Wasington and Lee University)<br>
                     <a href="http://library.wlu.edu/about/library-directory/jeff-barry">Jeff Barry</a> (Wasington and Lee University)<br>
                     <a href="http://library.wlu.edu/about/library-directory/brandon-walsh">Brandon Walsh</a> (Wasington and Lee University)</div>
-           
+
           <h5 id="sub-header">Washington and Lee Student Researchers</h4>
-           
+
           <div class="participant_section">Natsumi Alvarez (Summer 2015) - TEI encoding and development<br>
                     Dashiel Derricks (Fall 2015 - Winter 2016) - TEI encoding and development; Versioning Machine<br>
-                    Sarah Schaffer (Winter 2016) - Annotation prototyping</div>
-                    Abdurrafey Khan (Fall) - Versioning Machine
+                    Sarah Schaffer (Winter 2016) - Annotation prototyping<br>
+                    Abdurrafey Khan (Fall 2016 - Spring 2017) - Versioning Machine<br>
         </div>
        <hr>
       </div>
-
     </section>
     <%= render 'layouts/footer' %>
