--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -698,6 +698,9 @@ hi[rend="blue-initial"]{
   font-size: 40px;
 }
 
+.angle:after{content:">"}
+.angle:before{content:"<"}
+
 choice sic hi[rend="red-corr"]{
   color: red;
 }
