edited editions page

--- a/app/views/pages/edition.html.erb
+++ b/app/views/pages/edition.html.erb
@@ -37,12 +37,16 @@
             Edited by Stephen P. McCormick and Michela Scattolini
           </p>
           <p>
-            <%= link_to 'Berlin Translation', t_manuscript_path() %> (T) |
-            Turin, Biblioteca nazionale, N III 19<br>
-            Edited by Leslie Zarker Morgan
+            <%= link_to 'Berlin Translation', b_translation_path() %> |
+            Hugh of Auvergne<br>
+            Translated by Shira Schwam-Baird
           </p>
 
+<p>
           <%= link_to 'Hell Scene Comparison', hell_scene_path() %>
+          Synoptic comparison of all four witnesses
+        </p>
+        
         </div>
       </div>
     </section>
