edit editions page

--- a/app/views/pages/edition.html.erb
+++ b/app/views/pages/edition.html.erb
@@ -42,11 +42,11 @@
             Translated by Shira Schwam-Baird
           </p>
 
-<p>
+          <p>
           <%= link_to 'Hell Scene Comparison', hell_scene_path() %>
-          Synoptic comparison of all four witnesses
-        </p>
-        
+          Synoptic comparison of all four witnesses<br>
+          </p>
+
         </div>
       </div>
     </section>
