--- a/app/views/pages/edition.html.erb
+++ b/app/views/pages/edition.html.erb
@@ -43,7 +43,7 @@
           </p>
 
           <p>
-          <%= link_to 'Hell Scene Comparison', hell_scene_path() %>
+          <%= link_to 'Hell Scene Comparison', hell_scene_path() %><br>
           Synoptic comparison of all four witnesses<br>
           </p>
 
