--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -23,24 +23,32 @@
         <hr>
         <h4 id="sub-header">Huon d'Auvergne Project Team</h4>
         <div id="editorial_staff">
+
           <h5 id="sub-header">Lead Investigators</h5>
 
-          <div class="participant_section"><a href="http://www.loyola.edu/academic/modernlanguages/faculty/italian/morgan.aspx">Leslie Zarker Morgan</a>, Project Director and Principal Investigator (Loyola University Maryland)<br>
-                    <a href="http://www.unf.edu/~sschwam/">Shira Schwam-Baird</a>, Principal Investigator (University of North Florida)<br>
-                    <a href="https://wlu.academia.edu/StephenPatrickMcCormick">Stephen P. McCormick</a>, Principal Investigator (Washington and Lee University)</div>
+            <div class="participant_section">
+              <a href="http://www.loyola.edu/academic/modernlanguages/faculty/italian/morgan.aspx">Leslie Zarker Morgan</a>, Project Director and Principal Investigator (Loyola University Maryland)<br>
+              <a href="http://www.unf.edu/~sschwam/">Shira Schwam-Baird</a>, Principal Investigator (University of North Florida)<br>
+              <a href="https://wlu.academia.edu/StephenPatrickMcCormick">Stephen P. McCormick</a>, Principal Investigator (Washington and Lee University)</div>
+
+          <h5 id="sub-header">Collaborating Institutions</h5>
+
+            <div class="participant_section">
+              <a href="http://www.bibliotecaseminariopda.it/">Biblioteca del Seminario Vescovile di Padova (Padua, Italy)</a><br>
+              <a href="http://www.maru.firenze.sbn.it/">Biblioteca Marucelliana (Florence, Italy)</a><br>
 
           <h5 id="sub-header">Collaborating Scholars</h5>
 
-          <div class="participant_section"><a href="http://history.arizona.edu/alan-bernstein">Alan Bernstein</a> (University of Arizona)<br>
-                    <a href="http://ciham.ish-lyon.cnrs.fr/membres/jean-claude-vallecalle">Jean-Claude Vallecalle</a> (Université Lumière Lyon 2)<br>
-                    <a href="http://www.ed.ac.uk/literatures-languages-cultures/delc/french/staff/philip-bennett">Philip Bennett</a> (University of Edinburgh)<br>
-                    <a href="http://independent.academia.edu/MichelaGScattolini">Michela G. Scattolini</a> (Genoa, Italy; Independent researcher)</div>
+            <div class="participant_section"><a href="http://history.arizona.edu/alan-bernstein">Alan Bernstein</a> (University of Arizona)<br>
+              <a href="http://ciham.ish-lyon.cnrs.fr/membres/jean-claude-vallecalle">Jean-Claude Vallecalle</a> (Université Lumière Lyon 2)<br>
+              <a href="http://www.ed.ac.uk/literatures-languages-cultures/delc/french/staff/philip-bennett">Philip Bennett</a> (University of Edinburgh)<br>
+              <a href="http://independent.academia.edu/MichelaGScattolini">Michela G. Scattolini</a> (Genoa, Italy; Independent researcher)</div>
 
           <h5 id="sub-header">Digital Humanities Scholars</h5>
 
-          <div class="participant_section"><a href="http://library.wlu.edu/about/library-directory/mackenzie-brooks">Mackenzie Brooks</a> (Wasington and Lee University)<br>
-                    <a href="http://library.wlu.edu/about/library-directory/jeff-barry">Jeff Barry</a> (Wasington and Lee University)<br>
-                    <a href="http://library.wlu.edu/about/library-directory/brandon-walsh">Brandon Walsh</a> (Wasington and Lee University)</div>
+            <div class="participant_section"><a href="http://library.wlu.edu/about/library-directory/mackenzie-brooks">Mackenzie Brooks</a> (Wasington and Lee University)<br>
+              <a href="http://library.wlu.edu/about/library-directory/jeff-barry">Jeff Barry</a> (Wasington and Lee University)<br>
+              <a href="http://library.wlu.edu/about/library-directory/brandon-walsh">Brandon Walsh</a> (Wasington and Lee University)</div>
 
           <h5 id="sub-header">Washington and Lee Student Researchers</h4>
 
